# Orcastrate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  architecture.html  bandit-report.json  changelog.html  cli_reference.html  contributing.html  demo.py  development.html  docker-compose.test.yml  docker-compose.yml  examples.html  genindex.html  getting_started.html  index.html  justfile  license.html  live_testing.html  objects.inv  phase3_planning.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  sonar-project.properties  testing.html  user_guide.html
.github/workflows/: ci-example.yml  ci.yml  docs.yml  quality.yml  release.yml  sonarqube.yml  test-integration.yml  test-live.yml  test-unit.yml  test.yml
_sources/: contributing.md.txt  phase3_planning.md.txt  user_guide.md.txt
api/: modules.html
docker/: .env.docker
docs/: requirements.txt
docs/source/: architecture.md  changelog.md  cli_reference.md  conf.py  contributing.md  development.md  examples.md  getting_started.md  index.rst  license.md  live_testing.md  testing.md
docs/source/api/: modules.rst
scripts/: run_live_tests.py  show_config.py  validate_config.py  view_events.py
scripts/env/: ci.env  local.env  staging.env  testing.env
src/: __init__.py
src/agent/: __init__.py  base.py  coordinator.py
src/api/: __init__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/executors/: __init__.py  base.py  concrete_executor.py
src/logging/: __init__.py  events.py  log_manager.py  progress_tracker.py
src/logging_utils/: events.py  log_manager.py  progress_tracker.py
src/planners/: __init__.py  base.py  intelligent.py  template_planner.py
src/planners/analysis/: __init__.py  constraint_extractor.py  requirements_analyzer.py  technology_detector.py
src/planners/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  prompt_templates.py
src/security/: __init__.py  manager.py
src/tools/: __init__.py  aws.py  base.py  docker.py  filesystem.py  git.py  multicloud_tool.py  terraform.py
src/tools/database/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py  redis.py
src/tools/multicloud/: __init__.py  base.py  registry.py
src/tools/multicloud/providers/: __init__.py  aws_provider.py
src/utils/: __init__.py  directories.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_aws_integration.py  test_config_integration.py  test_database_integration.py  test_end_to_end.py  test_justfile_commands.py  test_multicloud_integration.py  test_terraform_integration.py
tests/live/: README.md  conftest.py  test_aws_live.py  test_docker_live.py
tests/unit/: __init__.py  conftest.py
tests/unit/agent/: __init__.py  test_agent_base.py  test_agent_coordinator.py
tests/unit/cli/: test_cli_main.py
tests/unit/config/: test_security.py  test_settings.py
tests/unit/executors/: __init__.py  test_concrete_executor.py  test_executors_base.py
tests/unit/planners/: __init__.py  test_intelligent_planner.py  test_planners_base.py  test_planners_template.py
tests/unit/planners/analysis/: test_constraint_extractor.py  test_requirements_analyzer.py  test_technology_detector.py
tests/unit/planners/llm/: test_anthropic_client.py  test_openai_client.py  test_prompt_templates.py
tests/unit/security/: __init__.py  test_security_manager.py
tests/unit/tools/: __init__.py  conftest.py  test_database_mongodb.py  test_database_mysql.py  test_database_postgresql.py  test_database_redis.py  test_multicloud_tool.py  test_terraform.py  test_tools_aws.py  test_tools_base.py  test_tools_docker.py  test_tools_filesystem.py  test_tools_git.py
tests/unit/utils/: test_directories.py
